# madame

./: .gitignore  CONTRIBUTING.md  README.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-04-23-madame-design.md  2026-04-23-madame-implementation.md  2026-04-24-editor-syntax-highlighting-plan.md
nix/: devshell.nix  package.nix
src/: README.md  confirm.ts  editor.ts  highlight.ts  index.html  ipc.ts  main.ts  markdown-it-task-lists.d.ts  preview.ts  recent.ts  scroll-sync.ts  shortcuts.ts  splitter.ts  titlebar.ts  toast.ts  types.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  state.rs  watcher.rs
src/styles/: app.css
src/tests/: highlight.test.ts  preview.test.ts  scroll-sync.test.ts  shortcuts.test.ts
