[package]
name = "madame"
version = "0.3.0"
description = "Minimal two-pane Markdown editor/viewer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "7"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
